2011-10-13  Robby Stephenson  <robby@periapsis.org>

	* Fixed broken script for searching Dark Horse Comics.

2011-10-05  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug that always showed checkmark for boolean field values (Bug 283444).

2011-10-04  Robby Stephenson  <robby@periapsis.org>

	* Updated GCstar exporter to include images.

2011-09-27  Robby Stephenson  <robby@periapsis.org>

	* Added Amazon data sources for China, Spain, and Italy.

2011-09-24  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.3.4.

2011-09-18  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug when editing month in the date widget in KDE 4.7 (Bug 281365).

2011-08-30  Robby Stephenson  <robby@periapsis.org>

	* Fixed showing a doubled filter count (Bug 281082).

2011-08-21  Robby Stephenson  <robby@periapsis.org>

	* Added data source for Google Book search.

2011-07-23  Robby Stephenson  <robby@periapsis.org>

	* Updated filter rules to match against values without diacritics
	  for "Contains" criters (Bug 222400).

2011-07-20  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug in year from Douban.com data source.
	* Fixed TMDB search for multiple person results.

2011-07-01  Robby Stephenson  <robby@periapsis.org>

	* Added importer for MovieMeter.nl.

2011-06-24  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug with CSV importer and changing delimiters.

2011-05-20  Robby Stephenson  <robby@periapsis.org>

	* Added importer for Goodreads collections.

2011-05-13  Pedro Miguel Carvalho <kde@pmc.com.pt>

	* Added shortcut key to switch main window to/from full screen state.
	* Added shortcut key to show/hide menubar (Bug 251157).

2011-05-07  Pedro Miguel Carvalho <kde@pmc.com.pt>

	* Added UI controls for changing icon size (Bug 250907).

2011-05-07  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with image link in Tri-Column report template (Bug 272744).

2011-05-06  Robby Stephenson  <robby@periapsis.org>
