@@ -126,4 +126,35 @@ void FilterTest::testFilter() {
 
   rule5->setFunction(Tellico::FilterRule::FuncRegExp);
   QVERIFY(!filter.matches(entry));
+
+  Tellico::Data::FieldPtr date(new Tellico::Data::Field(QLatin1String("date"),
+                                                        QLatin1String("Date"),
+                                                        Tellico::Data::Field::Date));
+  coll->addField(date);
+
+  entry->setField(QLatin1String("date"), QLatin1String("2011-10-25"));
+
+  Tellico::FilterRule* rule6 = new Tellico::FilterRule(QLatin1String("date"),
+                                                       QLatin1String("2011-10-24"),
+                                                       Tellico::FilterRule::FuncAfter);
+  filter.clear();
+  filter.append(rule6);
+  QVERIFY(filter.matches(entry));
+
+  rule6->setFunction(Tellico::FilterRule::FuncBefore);
+  QVERIFY(!filter.matches(entry));
+
+  // check that a date match is neither before or after
+  entry->setField(QLatin1String("date"), rule6->pattern());
+  rule6->setFunction(Tellico::FilterRule::FuncAfter);
+  QVERIFY(!filter.matches(entry));
+  rule6->setFunction(Tellico::FilterRule::FuncBefore);
+  QVERIFY(!filter.matches(entry));
+
+  // check that an invalid date never matches
+  entry->setField(QLatin1String("date"), QLatin1String("test"));
+  rule6->setFunction(Tellico::FilterRule::FuncAfter);
+  QVERIFY(!filter.matches(entry));
+  rule6->setFunction(Tellico::FilterRule::FuncBefore);
+  QVERIFY(!filter.matches(entry));
 }
