@@ -59,8 +59,10 @@ const QString Tellico::XML::dtdBibtexml = QLatin1String("bibtexml.dtd");
  * VERSION 10 added the game board collection.
  *
  * VERSION 11 remove ReadOnly and Dependent fields, and added apprioriate FieldFlags. An ID field was added by default.
+ *
+ * VERSION 12 added new filter rules: before and after, less than and greater than. But only use v12 when needed
  */
-const uint Tellico::XML::syntaxVersion = 11;
+const uint Tellico::XML::syntaxVersion = 12;
 const QString Tellico::XML::nsTellico = QLatin1String("http://periapsis.org/tellico/");
 
 const QString Tellico::XML::nsBookcase = QLatin1String("http://periapsis.org/bookcase/");
