@@ -85,7 +85,11 @@ QString TellicoXMLExporter::text() const {
 }
 
 QDomDocument TellicoXMLExporter::exportXML() const {
-  const int exportVersion = XML::syntaxVersion;
+  int exportVersion = XML::syntaxVersion;
+
+  if(exportVersion == 12 && !version12Needed()) {
+    exportVersion = 11;
+  }
 
   QDomImplementation impl;
   QDomDocumentType doctype = impl.createDocumentType(QLatin1String("tellico"),
@@ -453,8 +457,12 @@ void TellicoXMLExporter::exportFilterXML(QDomDocument& dom_, QDomElement& parent
       case FilterRule::FuncNotRegExp:
         ruleElem.setAttribute(QLatin1String("function"), QLatin1String("notregexp"));
         break;
-      default:
-        myWarning() << "no matching rule function!";
+      case FilterRule::FuncBefore:
+        ruleElem.setAttribute(QLatin1String("function"), QLatin1String("before"));
+        break;
+      case FilterRule::FuncAfter:
+        ruleElem.setAttribute(QLatin1String("function"), QLatin1String("after"));
+        break;
     }
     filterElem.appendChild(ruleElem);
   }
@@ -565,5 +573,17 @@ Tellico::Data::EntryList TellicoXMLExporter::sortEntries(const Data::EntryList& 
   return sorted;
 }
 
+bool TellicoXMLExporter::version12Needed() const {
+  // version 12 is only necessary if the new filter rules are not used
+  foreach(FilterPtr filter, collection()->filters()) {
+    foreach(FilterRule* rule, *filter) {
+      if(rule->function() == FilterRule::FuncBefore ||
+         rule->function() == FilterRule::FuncAfter) {
+        return true;
+      }
+    }
+  }
+  return false;
+}
 
 #include "tellicoxmlexporter.moc"
